fixed toggle shifting logo by adjusting image height and no position css style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,6 @@ body {
     min-height: 140px;
 }
 
-.navbar-brand {
-    position: absolute;
-}
-
 .navbar-toggler {
     border-color: #F5F5F5;
 }
